--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
     "firebase": "^4.3.0",
+    "jquery": "^3.2.1",
+    "ng-scrollreveal": "^2.0.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -33,7 +35,9 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.11",
     "@types/node": "~6.0.60",
+    "@types/scrollreveal": "0.0.2",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
